fix(theme-default): code line numbers unaligned in different display scale (close #499)

--- a/packages/@vuepress/theme-default/src/client/styles/code.scss
+++ b/packages/@vuepress/theme-default/src/client/styles/code.scss
@@ -125,7 +125,7 @@ pre[class*='language-'] {
   pre,
   pre[class*='language-'] {
     line-height: 1.4;
-    padding: 1.25rem 1.5rem;
+    padding: 1.3rem 1.5rem;
     margin: 0.85rem 0;
     border-radius: 6px;
     overflow: auto;
@@ -228,6 +228,7 @@ div[class*='language-'] {
         z-index: 3;
         user-select: none;
         font-size: 0.85em;
+        line-height: 0;
       }
     }
 
